# recommendation-systems

./: .flake8  .gitignore  .readthedocs.yaml  Makefile  README.md  configs.yml  parse.py  pipeline.py  pyproject.toml  requirements.txt  runserver.py
.github/: ci.yaml
.github/workflows/: ci.yaml
data/: course_tags.csv  user_assessment_scores.csv
database/: manager.py  utils.py
docs/: conf.py  index.rst  overview.md  requirements.txt
docs/recommender/: database.rst  engine.rst  index.rst  pipeline.rst  utils.rst
docs/recommenders/: index.rst
docs/server/: api.rst  flaskapp.rst  index.rst
examples/: hybrid.ipynb  matrix_factorization.ipynb  retrieval.ipynb
models/: keras_metadata.pb  saved_model.pb
models/variables/: variables.data-00000-of-00001  variables.index
notebook/: analysis.ipynb  collaborative_filtering.ipynb  deeplearning.ipynb
notebooks/: deeplearning.ipynb  deployment.ipynb  hybrid.ipynb  matrix_factorization.ipynb  retrival.ipynb
recommender/: __init__.py  parse.py  pipeline.py  similarity.py  utils.py
recommender/database/: manager.py  utils.py
recommender/engine/: deep_retrieval.py  factorization.py  similarity.py
recommender/utils/: plots.py  tools.py
recommenders/: __init__.py  cf.py  dnn.py  factorization_machines.py  hybrid.py  matrix_factorization.py  mf.py  retrieval.py  similarity.py  simple.py
recommenders/utils/: logger.py  plots.py  tools.py
server/: __init__.py  api.py  views.py
server/flask_app/: views.py
