[tool.poetry]
name = "user-recommender-system"
version = "0.1.0"
description = "Collaborative Filtering - User Recommender Application"
authors = ["Trace Smith <tsmith5151@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
Flask = "0.12"
numpy = "1.21.0"
pandas = "1.3.0"
PyYAML = "5.4.1"
requests = "2.12.1"
scikit-learn = "0.24.2"
scipy = "1.7.0"

[tool.poetry.dev-dependencies]
jupyterlab = "3.0.16"
ipykernel = "6.0.1"
ipython = "7.25.0"
flake8 = "3.9.2"
black = "21.6b0"

[tool.black]
line-length=88
target-version=['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.ipynb_checkpoints
  | \.venv
  | _build
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
