[tool.poetry]
name = "user-recommender-system"
version = "0.1.0"
description = "Collaborative Filtering - User Recommender Application"
authors = ["Trace Smith <tsmith5151@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
Flask = "0.12"
pandas = "1.3.0"
PyYAML = "5.4.1"
scikit-learn = "0.24.2"
tensorflow = "^2.5.0"
tensorflow-recommenders = "^0.5.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
jupyterlab = "3.0.16"
ipykernel = "6.0.1"
ipython = "7.25.0"
flake8 = "3.9.2"
black = "21.6b0"
pytest = "^6.2.4"


[tool.black]
line-length=88
target-version=['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.ipynb_checkpoints
  | \.venv
  | _build
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
